samples/_failures_safe/1761662944_eea814_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dfb6fe77.c: In function ‘main’:
./samples/SAFE/__tmp_dfb6fe77.c:137:9: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  137 |         print
      |         ^~~~~
      |         printf
./samples/SAFE/__tmp_dfb6fe77.c:137:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dfb6fe77.c:137:14: error: expected ‘;’ at end of input
  137 |         print
      |              ^
      |              ;
./samples/SAFE/__tmp_dfb6fe77.c:137:9: error: expected declaration or statement at end of input
  137 |         print
      |         ^~~~~
./samples/SAFE/__tmp_dfb6fe77.c:137:9: error: expected declaration or statement at end of input
